Changes in version 0.1.7 -
        * FIXES #5232 Perform long running and blocking transactions
                in background threads. Primarily this moves bridge
                descriptor reparsing into another thread and
                significantly increased the availability of bridgedb,
                as a result.

And includes the following general changes:
        * BUMPS leekspin version to 0.1.3

Changes in version 0.1.6 - 2014-03-26
BridgeDB 0.1.6 includes fixes for the following bugs:
	* FIXES #11196 BridgeDB should use leekspin
	* FIXES #11218 ReCaptchaProtectedResource.checkSolution()
		doesn't expect a deferred
	* FIXES #11219 BridgeDB's twisted version doesn´t have a
		`t.w.client.HTTPConnectionPool` class
	* FIXES #11231 BridgeDB's txrecaptcha returns the "No bridges
		available!" page if 'captcha_response_field' is blank

And includes the following general changes:
	* ADDS several new translations languages.

Changes in version 0.1.5 - 2014-02-27
BridgeDB 0.1.5 includes fixes for the following bugs:
	* FIXES #9264 Problem with transport lines in BridgeDB's bridge
		pool assignment files
	* FIXES #10809 reCAPTCHA on bridges.torproject.org are impossible
		to solve for humans
	* FIXES #10834 Configurable reCAPTCHA remoteip
	* FIXES #11127 reCaptcha verification is hardcoded to use
		plaintext HTTP

And includes the following general changes:
	* CHANGES the way the client's IP address is reported to the
	reCaptcha API server. Previously, for each client request, a
	completely random IP address was generated, and BridgeDB lied to
	the reCaptcha server by sending this random IP and saying that it
	was the client's IP. With these changes, BridgeDB can be
	configured to report a static IP address (it's own IP) as the
	client's IP, in the hopes that the IP whitelisting used by
	reCaptcha makes the returned CAPTCHAs less impossible to solve.
	* ADDS the ability to use a local cache of CAPTCHAs created by
	scripting Gimp with Python. See: