@@ -4,6 +4,10 @@ Changes in version 0.1.7 -
                 descriptor reparsing into another thread and
                 significantly increased the availability of bridgedb,
                 as a result.
+        * FIXES #11370 We were using an old (and deprecated) module when
+                we created our email responses. Now we use the newer
+                version. This should only affect internal functionality
+                and should not result in any noticable user-visible changes.
 
 And includes the following general changes:
         * BUMPS leekspin version to 0.1.3
